# project

./: .env.example  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: ecommerce_pipeline.py
infra/migrations/: V1__create_table.sql
infra/postgres/: init.sql
ingestion/: Dockerfile  main.py  pyproject.toml
ingestion/app/: config.py  csv_loader.py  database.py
