[tool.poetry]
name = "ingestion"
version = "0.1.0"
description = ""
authors = ["Celicja <lxqd@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.1"
requests = "^2.32.5"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.2"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
